chore: enhance null-safety and migrate URL handling to `URI` (#2132)
- Replace `new URL()` with `URI.create().toURL()` for better URI handling
- Refactor redundant code for improved readability and consistency